fix: deployment issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -45,9 +45,18 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --color-surface: var(--surface);
+  --color-surface-foreground: var(--surface-foreground);
+  --color-code: var(--code);
+  --color-code-foreground: var(--code-foreground);
+  --color-code-highlight: var(--code-highlight);
+  --color-code-number: var(--code-number);
+  --color-selection: var(--selection);
+  --color-selection-foreground: var(--selection-foreground);
 }
 
 :root {
+  --header-height: calc(var(--spacing) * 12 + 1px);
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -147,6 +156,10 @@
     outline: none;
     position: relative;
     @apply -mx-1 md:-mx-1;
+
+    &:has([data-rehype-pretty-code-title]) [data-slot="copy-button"] {
+      top: calc(var(--spacing) * 1.5) !important;
+    }
   }
 
   [data-rehype-pretty-code-title] {
@@ -219,9 +232,11 @@
       width: 2px;
       height: 100%;
       content: "";
-      background-color: color-mix(in oklab,
-          var(--muted-foreground) 50%,
-          transparent);
+      background-color: color-mix(
+        in oklab,
+        var(--muted-foreground) 50%,
+        transparent
+      );
     }
   }
 
